// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c69 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c10 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c15 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 0;
  color: #ffffff;
}

.c20 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c26 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c39 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c43 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c49 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c59 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c60 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  min-width: 0;
}

.c12 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c16 {
  padding-right: 56px;
  padding-left: 56px;
}

.c18 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c30 {
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c32 {
  font-size: 0.875rem;
  background: #ffffff;
  color: #32324d;
  padding: 16px;
  border-radius: 4px;
  width: 100%;
  height: 6.5625rem;
  line-height: 4;
}

.c34 {
  background: #ffffff;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  width: 100%;
  cursor: default;
}

.c37 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c44 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c47 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c50 {
  background: #ffffff;
  padding: 16px;
}

.c68 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c51 {
  border-radius: 4px;
}

.c53 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c55 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c56 {
  background: transparent;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c61 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c63 {
  color: #666687;
  width: 0.6875rem;
}

.c66 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c17 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c48 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c62 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c52 {
  border: 1px solid #f6f6f9;
}

.c52:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c52:hover:not([aria-disabled='true']) .c9 {
  color: #4945ff;
}

.c52:hover:not([aria-disabled='true']) > .c5 {
  background: #f0f0ff;
}

.c52:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c65 {
  border: 1px solid #ffffff;
}

.c65:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c65:hover:not([aria-disabled='true']) .c9 {
  color: #4945ff;
}

.c65:hover:not([aria-disabled='true']) > .c5 {
  background: #f0f0ff;
}

.c65:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c57 {
  border: none;
  position: relative;
  outline: none;
}

.c57[aria-disabled='true'] {
  pointer-events: none;
}

.c57[aria-disabled='true'] svg path {
  fill: #666687;
}

.c57 svg path {
  fill: #4945ff;
}

.c57:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c57:focus-visible {
  outline: none;
}

.c57:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c64 path {
  fill: #666687;
}

.c58 {
  text-align: left;
}

.c58 > span {
  max-width: 100%;
}

.c58 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c58 svg path {
  fill: #8e8ea9;
}

.c54 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c54:hover svg path {
  fill: #4945ff;
}

.c13 {
  position: relative;
  outline: none;
}

.c13 > svg {
  height: 12px;
  width: 12px;
}

.c13 > svg > g,
.c13 > svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c14 {
  height: 2rem;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c9 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c14:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  line-height: 0;
}

.c36 {
  border: 1px solid #dcdce4;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c36[aria-disabled='true'] {
  color: #666687;
}

.c36:focus-visible {
  outline: none;
}

.c36:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c42 > svg {
  width: 0.375rem;
}

.c42 > svg > path {
  fill: #666687;
}

.c40 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c70[data-state='checked'] .c9 {
  font-weight: bold;
  color: #4945ff;
}

.c29 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c29::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29[aria-disabled='true'] {
  color: inherit;
}

.c29:focus {
  outline: none;
  box-shadow: none;
}

.c28 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c21 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c45 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c22 {
  grid-column: span 6;
  max-width: 100%;
}

.c46 {
  grid-column: span 7;
  max-width: 100%;
}

.c67 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c31 {
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c31:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c33 {
  border: none;
  resize: none;
}

.c33::-webkit-input-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c33::-moz-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c33:-ms-input-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c33::placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c33:focus-within {
  outline: none;
}

.c4 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 8px;
  position: relative;
  outline: none;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3 svg path {
  fill: #4945ff;
}

.c3:hover {
  color: #7b79ff;
}

.c3:active {
  color: #271fe0;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

@media (max-width:68.75rem) {
  .c22 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c22 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c46 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c46 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c67 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c67 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                  fill="#212134"
                />
              </svg>
              <span
                class="c4"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c5 c6"
          >
            <div
              class="c5 c7 c8"
            >
              <h1
                class="c9 c10"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c5 c11"
            >
              <button
                aria-disabled="false"
                class="c5 c12 c11 c13 c14"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c9 c15"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c16"
      >
        <div
          class="c5 c17"
        >
          <div
            class="c18"
          >
            <div
              class="c5 c19"
            >
              <h2
                class="c9 c20"
              >
                Details
              </h2>
              <div
                class="c21"
              >
                <div
                  class="c22"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class=""
                      >
                        <div
                          class="c5 c23"
                        >
                          <label
                            class="c9 c24 c25"
                            for="1"
                          >
                            Name
                            <span
                              class="c9 c26 c27"
                            >
                              *
                            </span>
                          </label>
                          <div
                            class="c5 c6 c28"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c29"
                              id="1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c22"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c23"
                      >
                        <label
                          class="c9 c24 c25"
                          for="description"
                        >
                          Description
                        </label>
                        <div
                          class="c30 c31"
                        >
                          <textarea
                            aria-invalid="false"
                            aria-required="false"
                            class="c32 c33"
                            font-size="2"
                            id="description"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c22"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c23"
                      >
                        <label
                          class="c9 c24 c25"
                          for="4"
                        >
                          Token duration
                          <span
                            class="c9 c26 c27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          aria-autocomplete="none"
                          aria-controls="radix-0"
                          aria-describedby="4-hint 4-error"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-label="Token duration"
                          aria-required="true"
                          class="c5 c34 c35 c36"
                          data-state="closed"
                          dir="ltr"
                          id="4"
                          overflow="hidden"
                          role="combobox"
                          tabindex="0"
                        >
                          <span
                            class="c5 c37 c38"
                          >
                            <span
                              class="c9 c39 c40"
                            >
                              <span
                                class="c41"
                              >
                                <span>
                                  Select
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="c5 c38"
                          >
                            <span
                              aria-hidden="true"
                              class="c42"
                            >
                              <svg
                                fill="none"
                                height="1rem"
                                viewBox="0 0 14 8"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c9 c43"
                    />
                  </div>
                </div>
                <div
                  class="c22"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c23"
                      >
                        <label
                          class="c9 c24 c25"
                          for="7"
                        >
                          Token type
                          <span
                            class="c9 c26 c27"
                          >
                            *
                          </span>
                        </label>
                        <div
                          aria-autocomplete="none"
                          aria-controls="radix-1"
                          aria-describedby="7-hint 7-error"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-label="Token type"
                          aria-required="true"
                          class="c5 c34 c35 c36"
                          data-state="closed"
                          dir="ltr"
                          id="7"
                          overflow="hidden"
                          role="combobox"
                          tabindex="0"
                        >
                          <span
                            class="c5 c37 c38"
                          >
                            <span
                              class="c9 c39 c40"
                            >
                              <span
                                class="c41"
                              >
                                <span>
                                  Select
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="c5 c38"
                          >
                            <span
                              aria-hidden="true"
                              class="c42"
                            >
                              <svg
                                fill="none"
                                height="1rem"
                                viewBox="0 0 14 8"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c44 c45"
          >
            <div
              class="c46"
            >
              <div
                class="c47"
              >
                <div
                  class="c5 c48"
                >
                  <h2
                    class="c9 c20"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c9 c49"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c50"
                >
                  <div
                    aria-disabled="false"
                    class="c51 c52"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c5 c53 c6 c54"
                    >
                      <div
                        class="c5 c55 c38"
                      >
                        <button
                          aria-controls="accordion-content-8"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-8"
                          class="c5 c56 c11 c57 c58"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c9 c59"
                          >
                            <span
                              class="c9 c60"
                              id="accordion-label-8"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c5 c38"
                        >
                          <span
                            aria-hidden="true"
                            class="c5 c61 c62"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c63 c64"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c51 c65"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c5 c66 c6 c54"
                    >
                      <div
                        class="c5 c55 c38"
                      >
                        <button
                          aria-controls="accordion-content-9"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-9"
                          class="c5 c56 c11 c57 c58"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c9 c59"
                          >
                            <span
                              class="c9 c60"
                              id="accordion-label-9"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c5 c38"
                        >
                          <span
                            aria-hidden="true"
                            class="c5 c61 c62"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c63 c64"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c67"
            >
              <div
                class="c68"
                style="min-height: 100%;"
              >
                <div
                  class="c5 c48"
                >
                  <h3
                    class="c9 c20"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c9 c49"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c69"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c77 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c10 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c15 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 0;
  color: #ffffff;
}

.c23 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 500;
  color: #32324d;
}

.c25 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c28 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c31 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c33 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c46 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c50 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c52 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c67 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c68 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c7 {
  min-width: 0;
}

.c12 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c19 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c20 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c26 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c37 {
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c39 {
  font-size: 0.875rem;
  background: #ffffff;
  color: #32324d;
  padding: 16px;
  border-radius: 4px;
  width: 100%;
  height: 6.5625rem;
  line-height: 4;
}

.c41 {
  background: #eaeaef;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  width: 100%;
  cursor: default;
}

.c44 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c51 {
  background: #ffffff;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  width: 100%;
  cursor: default;
}

.c53 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c56 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c58 {
  background: #ffffff;
  padding: 16px;
}

.c76 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c59 {
  border-radius: 4px;
}

.c61 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c63 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c64 {
  background: transparent;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c69 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c71 {
  color: #666687;
  width: 0.6875rem;
}

.c74 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c18 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

.c22 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c27 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c42 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c45 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c57 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c70 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c60 {
  border: 1px solid #f6f6f9;
}

.c60:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c60:hover:not([aria-disabled='true']) .c9 {
  color: #4945ff;
}

.c60:hover:not([aria-disabled='true']) > .c5 {
  background: #f0f0ff;
}

.c60:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c73 {
  border: 1px solid #ffffff;
}

.c73:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c73:hover:not([aria-disabled='true']) .c9 {
  color: #4945ff;
}

.c73:hover:not([aria-disabled='true']) > .c5 {
  background: #f0f0ff;
}

.c73:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c65 {
  border: none;
  position: relative;
  outline: none;
}

.c65[aria-disabled='true'] {
  pointer-events: none;
}

.c65[aria-disabled='true'] svg path {
  fill: #666687;
}

.c65 svg path {
  fill: #4945ff;
}

.c65:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c65:focus-visible {
  outline: none;
}

.c65:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c72 path {
  fill: #666687;
}

.c66 {
  text-align: left;
}

.c66 > span {
  max-width: 100%;
}

.c66 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c66 svg path {
  fill: #8e8ea9;
}

.c62 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c62:hover svg path {
  fill: #4945ff;
}

.c13 {
  position: relative;
  outline: none;
}

.c13 > svg {
  height: 12px;
  width: 12px;
}

.c13 > svg > g,
.c13 > svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c78[aria-disabled='true'] .c9 {
  color: #666687;
}

.c78[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14 {
  height: 2rem;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c9 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  background-color: #f6f6f9;
}

.c14:active {
  background-color: #eaeaef;
}

.c14 .c9 {
  color: #32324d;
}

.c14 svg > g,
.c14 svg path {
  fill: #32324d;
}

.c16 {
  height: 2rem;
}

.c16[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true'] .c9 {
  color: #666687;
}

.c16[aria-disabled='true'] svg > g,.c16[aria-disabled='true'] svg path {
  fill: #666687;
}

.c16[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c16[aria-disabled='true']:active svg > g,.c16[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c16:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c16:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c16 svg > g,
.c16 svg path {
  fill: #ffffff;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  line-height: 0;
}

.c43 {
  border: 1px solid #dcdce4;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c43[aria-disabled='true'] {
  color: #666687;
}

.c43:focus-visible {
  outline: none;
}

.c43:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c49 > svg {
  width: 0.375rem;
}

.c49 > svg > path {
  fill: #666687;
}

.c47 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c48 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c79[data-state='checked'] .c9 {
  font-weight: bold;
  color: #4945ff;
}

.c36 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c36::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36[aria-disabled='true'] {
  color: inherit;
}

.c36:focus {
  outline: none;
  box-shadow: none;
}

.c35 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c35:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c29 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c54 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c30 {
  grid-column: span 6;
  max-width: 100%;
}

.c55 {
  grid-column: span 7;
  max-width: 100%;
}

.c75 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c38 {
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c38:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c40 {
  border: none;
  resize: none;
}

.c40::-webkit-input-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c40::-moz-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c40:-ms-input-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c40::placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c40:focus-within {
  outline: none;
}

.c4 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 8px;
  position: relative;
  outline: none;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3 svg path {
  fill: #4945ff;
}

.c3:hover {
  color: #7b79ff;
}

.c3:active {
  color: #271fe0;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c21 {
  margin-right: 24px;
}

.c21 svg {
  width: 2rem;
  height: 2rem;
}

.c24 {
  word-break: break-all;
}

@media (max-width:68.75rem) {
  .c30 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c30 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c55 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c55 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c75 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c75 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                  fill="#212134"
                />
              </svg>
              <span
                class="c4"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c5 c6"
          >
            <div
              class="c5 c7 c8"
            >
              <h1
                class="c9 c10"
              >
                My super token
              </h1>
            </div>
            <div
              class="c5 c11"
            >
              <button
                aria-disabled="false"
                class="c5 c12 c11 c13 c14"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0 0 11.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 0 0 3.589-4.831 1.117 1.117 0 0 0-.664-1.418 1.086 1.086 0 0 0-1.393.676 7.769 7.769 0 0 1-2.792 3.758 7.546 7.546 0 0 1-4.41 1.428V4.222h.002a7.492 7.492 0 0 1 3.003.625 7.61 7.61 0 0 1 2.5 1.762l.464.551-2.986 3.042a.186.186 0 0 0 .129.316H22V3.317a.188.188 0 0 0-.112-.172.179.179 0 0 0-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 0 0-3.239-2.293Zm-3.863 1.418V2v2.222Zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778Z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c9 c15"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c5 c12 c11 c13 c16"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c9 c15"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c5 c18"
        >
          <div
            class="c5 c19 c8"
          >
            <div
              class="c5 c20 c8 c21"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 1 1 0-4H23v4h-2v4h-4v-4ZM7 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c5 c22"
            >
              <div
                class="c5 c8"
              >
                <span
                  class="c9 c23 c24"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c9 c25"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c26"
          >
            <div
              class="c5 c27"
            >
              <h2
                class="c9 c28"
              >
                Details
              </h2>
              <div
                class="c29"
              >
                <div
                  class="c30"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class=""
                      >
                        <div
                          class="c5 c22"
                        >
                          <label
                            class="c9 c31 c32"
                            for="12"
                          >
                            Name
                            <span
                              class="c9 c33 c34"
                            >
                              *
                            </span>
                          </label>
                          <div
                            class="c5 c6 c35"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c36"
                              id="12"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c30"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c22"
                      >
                        <label
                          class="c9 c31 c32"
                          for="description"
                        >
                          Description
                        </label>
                        <div
                          class="c37 c38"
                        >
                          <textarea
                            aria-invalid="false"
                            aria-required="false"
                            class="c39 c40"
                            font-size="2"
                            id="description"
                          >
                            This describe my super token
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c30"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c22"
                      >
                        <label
                          class="c9 c31 c32"
                          for="15"
                        >
                          Token duration
                          <span
                            class="c9 c33 c34"
                          >
                            *
                          </span>
                        </label>
                        <div
                          aria-autocomplete="none"
                          aria-controls="radix-9"
                          aria-describedby="15-hint 15-error"
                          aria-disabled="true"
                          aria-expanded="false"
                          aria-label="Token duration"
                          aria-required="true"
                          class="c5 c41 c42 c43"
                          data-disabled=""
                          data-state="closed"
                          dir="ltr"
                          id="15"
                          overflow="hidden"
                          role="combobox"
                        >
                          <span
                            class="c5 c44 c45"
                          >
                            <span
                              class="c9 c46 c47"
                            >
                              <span
                                class="c48"
                              >
                                <span>
                                  Select
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="c5 c45"
                          >
                            <span
                              aria-hidden="true"
                              class="c49"
                            >
                              <svg
                                fill="none"
                                height="1rem"
                                viewBox="0 0 14 8"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c9 c50"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c30"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c5 c22"
                      >
                        <label
                          class="c9 c31 c32"
                          for="18"
                        >
                          Token type
                          <span
                            class="c9 c33 c34"
                          >
                            *
                          </span>
                        </label>
                        <div
                          aria-autocomplete="none"
                          aria-controls="radix-10"
                          aria-describedby="18-hint 18-error"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-label="Token type"
                          aria-required="true"
                          class="c5 c51 c42 c43"
                          data-state="closed"
                          dir="ltr"
                          id="18"
                          overflow="hidden"
                          role="combobox"
                          tabindex="0"
                        >
                          <span
                            class="c5 c44 c45"
                          >
                            <span
                              class="c9 c52 c47"
                            >
                              <span
                                class="c48"
                              >
                                Read-only
                              </span>
                            </span>
                          </span>
                          <span
                            class="c5 c45"
                          >
                            <span
                              aria-hidden="true"
                              class="c49"
                            >
                              <svg
                                fill="none"
                                height="1rem"
                                viewBox="0 0 14 8"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c53 c54"
          >
            <div
              class="c55"
            >
              <div
                class="c56"
              >
                <div
                  class="c5 c57"
                >
                  <h2
                    class="c9 c28"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c9 c25"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c58"
                >
                  <div
                    aria-disabled="false"
                    class="c59 c60"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c5 c61 c6 c62"
                    >
                      <div
                        class="c5 c63 c45"
                      >
                        <button
                          aria-controls="accordion-content-19"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-19"
                          class="c5 c64 c11 c65 c66"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c9 c67"
                          >
                            <span
                              class="c9 c68"
                              id="accordion-label-19"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c5 c45"
                        >
                          <span
                            aria-hidden="true"
                            class="c5 c69 c70"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c71 c72"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c59 c73"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c5 c74 c6 c62"
                    >
                      <div
                        class="c5 c63 c45"
                      >
                        <button
                          aria-controls="accordion-content-20"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-20"
                          class="c5 c64 c11 c65 c66"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c9 c67"
                          >
                            <span
                              class="c9 c68"
                              id="accordion-label-20"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c5 c45"
                        >
                          <span
                            aria-hidden="true"
                            class="c5 c69 c70"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c71 c72"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c75"
            >
              <div
                class="c76"
                style="min-height: 100%;"
              >
                <div
                  class="c5 c57"
                >
                  <h3
                    class="c9 c28"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c9 c25"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c77"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
